# ecl_rt_legacy

./: .gitattributes  CMakeLists.txt  README.md  bmp.h  image.h  main.c  todo.txt  v3.h
src/: ecl.h  ecl_math.h  ecl_rt.c  ecl_rt.h  image.h  main.c  main.h  v3.h
